tutorial/res/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pplcdid
spec:
  replicas: 2
  selector:
    matchLabels:
      app: pplcdid
  template:
    metadata:
      labels:
        app: pplcdid
    spec:
      containers:
      - name: pplcdid
        image: pplcdid/did-base:latest
        ports:
        - containerPort: 3000
