tutorial/res/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: ppldid
spec:
  selector:
    app: ppldid
  type: LoadBalancer
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 3000
